# lib-metis

./: INSTALL  LICENSE  Makefile  Makefile.in  README.md  configure.ac
Tests/: Makefile  parse_metis_file.cmx  parse_metis_file.ml
Utils/: Makefile  metisPrint.ml
examples/: jacobi2d.grf
lib/: Makefile  Makefile.in  metis.ml  metisAdjacency.ml  metisCodegen.ml  metisDriver.ml  metisParser.ml  metis_stubs.c
